# Modern-CMake-Example

./: .gitignore  README.md
main/: CMakeLists.txt  main.cpp
pkg/: CMakeLists.txt  Config.cmake.in  library.cpp
pkg/include/: library.h
